--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
   --background: #ffffff;
   --foreground: #171717;
   --grid-template-columns: 64% auto;
+  --grid-template-rows: auto auto auto auto;
   --my-shadow: 0 0 20px #00000010;
 }
 
@@ -19,6 +20,7 @@
   :root {
     --background: #f5f9fa;
     --foreground: #171717;
+    --popup-background: rgba(255, 0, 0, 0.5);
 
   }
 }
@@ -29,3 +31,4 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
